# stpsf

./: CITATION.cff  README.rst  pyproject.toml  requirements.txt  tox.ini
.github/workflows/: build.yml  ci_workflows.yml  download_data.yml  retrieve_cache.yml  tests.yml
dev_utils/: make-data-sdist.sh
docs/: README figure.ipynb  index.rst  installation.rst  jwst_iec_wfe.ipynb  release.rst  relnotes.rst  roman.rst  usage.ipynb  webbpsf_to_stpsf.ipynb
docs/roman_figures/: how_tos.py
notebooks/: Distortion_examples.ipynb  STPSF-Roman_Tutorial.ipynb
stpsf/: constants.py  detectors.py  distortion.py  gridded_library.py  mast_wss.py  opds.py  optics.py  roman.py  stpsf_core.py  surs.py  trending.py  utils.py
stpsf/tests/: test_distortion.py  test_nircam.py  test_opds.py  test_roman.py
