[build-system]
requires = [
    "setuptools >= 61.2",
    "setuptools_scm[toml]>=3.4.3",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "stpsf"
description = "Creates simulated point spread functions for Space Telescopes (James Webb, Roman)"
authors = [
    { name = "Association of Universities for Research in Astronomy", email = "help@stsci.edu" },
]
license-files = ["LICENSE.md"]
dynamic = [
    "version",
]
readme = "README.rst"
requires-python = ">=3.10"
dependencies = [
    "astropy>=5.1.0,<7.1.0",
    "astroquery>=0.4.6,<0.5.0",
    "matplotlib>=3.9.1,<3.11.0",
    "numpy>=1.21.6,<2.4.0",
    "photutils>=1.13.0,<2.3.0",
    "poppy>=1.1.2,<1.2.0",
    "pysiaf>=0.11.0,<0.26.0",
    "scipy>=1.14.0,<1.16.0",
    "synphot>=1.4.0,<1.7.0",
]

[project.optional-dependencies]
test = [
    "pytest>=9.0",
]
docs = [
    "nbsphinx",
    "pandoc",
    "sphinx",
    "sphinx-astropy",
    "sphinx-automodapi",
    "sphinx-issues",
    "stsci_rtd_theme",
    "tomli; python_version <\"3.11\"",
]
jwst = [
    "jwst",
]

[project.urls]
Homepage = "http://stpsf.readthedocs.io/"
github_project = "https://github.com/spacetelescope/stpsf"

[tool.setuptools.packages.find]
namespaces = false

[tool.setuptools.package-data]
"*" = [
    "*.fits", "*.csv", "scripts/"
]
"stpsf.tests" = [
    "data/*",
]

[tool.setuptools.exclude-package-data]
"*" = ["docs/_build/","build/"]

[tool.setuptools_scm]
local_scheme = "no-local-version"
write_to = "stpsf/version.py"

[tool.pytest]
minversion = "9.0"
testpaths = [
    "stpsf/tests",
]
norecursedirs = [
    "build",
    "docs/_build",
]
astropy_header = true
doctest_plus = "enabled"
text_file_format = "rst"
addopts = ["-p no:warnings"]

[tool.coverage.run]
source = [
    "stpsf",
]
omit = [
    "stpsf/conftest*",
    "stpsf/tests/*",
    "stpsf/*/tests/*",
    "stpsf/*/*/tests/*",
    "stpsf/version*",
    "*/stpsf/conftest*",
    "*/stpsf/tests/*",
    "*/stpsf/*/tests/*",
    "*/stpsf/*/*/tests/*",
    "*/stpsf/version*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "except ImportError",
    "raise AssertionError",
    "raise NotImplementedError",
    "def main(.*):",
    "pragma: py{ignore_python_version}",
]
omit = [
    "stpsf/conftest*",
    "stpsf/tests/*",
    "stpsf/*/tests/*",
    "stpsf/*/*/tests/*",
    "stpsf/version*",
    "*/stpsf/conftest*",
    "*/stpsf/tests/*",
    "*/stpsf/*/tests/*",
    "*/stpsf/*/*/tests/*",
    "*/stpsf/version*",
]
